# fast

./: .env-example  .env.example  .gitignore  README.md  api_requests.http  docker-compose.yml  mysqlconf.cnf  pyproject.toml  request.http
FastApi101/: __main__.py
FastApi101/api/v1/: index.py
FastApi101/api/v2/: users.py
FastApi101/cli/: main.py
FastApi101/web/: main.py
FastApi101/web/statics/css/: index.css  styles.css
FastApi101/web/statics/js/: indexPage.js
fast/: __main__.py
fast/adapters/repositories/: users.py
fast/api/v1/: main.py  users.py
fast/api/v1/controllers/: index.py  user.py
fast/api/v2/: dashboard.py  users.py
fast/cli/: main.py
fast/config/: database.py  environment.py
fast/core/: bcrypt.py  password.py  validations.py
fast/database/: config.py
fast/domain/models/: user.py
fast/domain/repositories/: users.py
fast/gateway/cli/: main.py
fast/gateway/web/: handlers.py  main.py
fast/infra/: config.py  database.py
fast/infra/repositories/: base.py  users.py
fast/models/: user.py
fast/presentation/cli/: main.py
fast/presentation/web/: handlers.py  main.py
fast/repositories/: base.py  user.py  users.py
fast/test/: test_core_password.py
fast/web/: handlers.py  main.py
fast/web/controllers/: auth.py  root.py
fast/web/routes/: auth.py  main.py  root.py
pyweb/: __main__.py
pyweb/api/v1/: users.py
pyweb/cli/: main.py
pyweb/core/: user.py  validations.py
pyweb/database/: config.py
pyweb/repositories/: user.py
pyweb/web/: main.py
pyweb/web/controllers/: auth.py  root.py
requests/: api.http
(+70 files in other folders)
