[tool.poetry]
name = "fast"
version = "0.1.0"
description = ""
authors = ["Dalmo Felipe <dalmo.felipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pyclean = "^2.4.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
sqlmodel = "^0.0.8"
requests = "^2.28.2"
bcrypt = "^4.0.1"
pymysql = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
blue = "^0.9.1"

[tool.poetry.scripts]
fast = 'fast.cli.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
